--- a/DrawThePerfectCircle/DrawThePerfectCircle.csproj
+++ b/DrawThePerfectCircle/DrawThePerfectCircle.csproj
@@ -49,6 +49,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mouse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
